--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,15 +19,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".adapter.SearchActivity"
-            android:label="@string/title_activity_search"
-            android:parentActivityName=".MainRandomActivity"
-            android:theme="@style/AppTheme.NoActionBar">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="octacode.allblue.code.wikipediaeditor.MainRandomActivity" />
-        </activity>
+        <activity android:name=".SearchActivity"></activity>
     </application>
 
 </manifest>
