--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
+    configurations.all {
+        resolutionStrategy {
+            force 'com.android.support:support-annotations:24.2.1'
+            force 'com.google.code.findbugs:jsr305:3.0.1'
+        }
+    }
     compileSdkVersion 24
     buildToolsVersion "24.0.2"
     defaultConfig {
@@ -10,6 +16,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
     }
 
     buildTypes {
@@ -30,9 +37,11 @@ dependencies {
     }
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.github.paolorotolo:appintro:4.1.0'
+    compile 'info.bliki.wiki:bliki-core:3.1.0'
     compile 'com.android.support:recyclerview-v7:24.2.1'
     compile 'com.android.support:cardview-v7:24.2.1'
     compile 'com.android.support:support-v4:24.2.1'
     compile 'com.android.support:design:24.2.1'
+    compile 'com.android.support:support-vector-drawable:24.2.1'
     testCompile 'junit:junit:4.12'
 }
